<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.main.MainView">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/moviesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tvMoviePopularTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moviePopularTitle"
        android:layout_below="@id/moviesTitle"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMoviePopularTitle"/>
    <TextView
        android:id="@+id/tvMovieRatedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieRatedTitle"
        android:layout_below="@+id/rvPopularMovie"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRatedMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMovieRatedTitle"/>
    <TextView
        android:id="@+id/tvMovieRecommendedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieRecommendation"
        android:layout_below="@id/rvRatedMovie"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecommendedMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMovieRecommendedTitle"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvshow"
            android:textSize="24sp"
            android:layout_below="@id/rvRecommendedMovie"
            android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tvTVPopularTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moviePopularTitle"
        android:layout_below="@id/tvTitle"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTVPopularTitle"/>
        <TextView
            android:id="@+id/tvTVRatedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieRatedTitle"
            android:layout_below="@id/rvPopularTV"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:textSize="24sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRatedTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTVRatedTitle"/>
        <TextView
            android:id="@+id/tvTVRecommendationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRecommendation"
            android:layout_below="@id/rvRatedTV"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:textSize="24sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecommendedTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTVRecommendationTitle"/>

    </RelativeLayout>
</ScrollView>